"""bazelbuild/rules_rust/extensions/wasm_bindgen"""

module(
    name = "rules_rust_wasm_bindgen",
    version = "0.54.1",
)

bazel_dep(
    name = "rules_rust",
    version = "0.54.1",
)
local_path_override(
    module_name = "rules_rust",
    path = "../..",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
bazel_dep(
    name = "aspect_rules_js",
    version = "1.39.0",
)
bazel_dep(
    name = "rules_nodejs",
    version = "5.8.5",
)

rust_ext_wasm_bindgen = use_extension("//:extensions.bzl", "rust_ext_wasm_bindgen")
use_repo(
    rust_ext_wasm_bindgen,
    "rrwbd",
    "rrwbd__anyhow-1.0.71",
    "rrwbd__assert_cmd-1.0.8",
    "rrwbd__diff-0.1.13",
    "rrwbd__docopt-1.1.1",
    "rrwbd__env_logger-0.8.4",
    "rrwbd__log-0.4.19",
    "rrwbd__predicates-1.0.8",
    "rrwbd__rayon-1.7.0",
    "rrwbd__rouille-3.6.2",
    "rrwbd__serde-1.0.171",
    "rrwbd__serde_derive-1.0.171",
    "rrwbd__serde_json-1.0.102",
    "rrwbd__tempfile-3.6.0",
    "rrwbd__ureq-2.8.0",
    "rrwbd__walrus-0.20.3",
    "rrwbd__wasm-bindgen-0.2.92",
    "rrwbd__wasm-bindgen-cli-support-0.2.92",
    "rrwbd__wasm-bindgen-shared-0.2.92",
    "rrwbd__wasmparser-0.102.0",
    "rrwbd__wasmprinter-0.2.60",
    "rules_rust_wasm_bindgen_cli",
)

register_toolchains(
    "//:default_wasm_bindgen_toolchain",
)
